####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = yar

## INCLUDES were found outside kdevelop specific part

yar_SOURCES = zorlon.cpp game.cpp shield.cpp destroy.cpp quotile.cpp yar.cpp graphics.cpp sprites.cpp sgw.cpp main.cpp 
yar_LDADD   = 


EXTRA_DIST = main.cpp sgw.cpp sgw.hxx yar.hxx sprites.cpp graphics.cpp yar.cpp quotile.cpp destroy.cpp shield.cpp game.cpp zorlon.cpp 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
yar_LDFLAGS = $(all_libraries) 
                                                                                
